left align docs, fix example error (#147)

--- a/new_webapp/src/style/App.scss
+++ b/new_webapp/src/style/App.scss
@@ -86,4 +86,5 @@ td > pre {
   margin: 0;
   padding: 0;
   border: 0;
+  text-align: left;
 }
